--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100086440730127%22%3A%22LdnVKhFf%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "datr",
+        "value": "4wWoaLD5Q0I26ZurtudFMsMZ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "sb",
+        "value": "5AWoaOxnjWxy_-jCDahFBXZd",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100086440730127",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "xs",
+        "value": "46%3ArJCfgiF7-lVE_Q%3A2%3A1755842093%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "pas",
+        "value": "100086440730127%3ARDFv7V6bBc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.195Z",
+        "lastAccessed": "2025-08-22T06:07:40.195Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B677x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.196Z",
+        "lastAccessed": "2025-08-22T06:07:40.196Z"
+    },
+    {
+        "key": "fr",
+        "value": "0tE4LankVyS4Abmcd.AWfQSrQbiSEmiRDzRUUWy0bFE4jyCf8u8ICFBdZhPy8FSqk8feo.BoqAXk..AAA.0.0.BoqAif.AWfRoIqUWfp3zNgrax44WmFnSqU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.196Z",
+        "lastAccessed": "2025-08-22T06:07:40.196Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755842719",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.196Z",
+        "lastAccessed": "2025-08-22T06:07:40.196Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101638732%3BT%3A29264045",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T06:07:40.196Z",
+        "lastAccessed": "2025-08-22T06:07:40.196Z"
+    }
+]
